--- a/src/components/AdminHeaderComp/AdminHeaderComp.css
+++ b/src/components/AdminHeaderComp/AdminHeaderComp.css
@@ -1,7 +1,7 @@
 /* AdminHeader.css */
 
 .admin-header {
-    background-color: #1a237e;
+    background-color: #2731a3;
     color: white;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     position: sticky;
@@ -61,7 +61,7 @@
     display: flex;
     align-items: center;
     padding: 0 20px;
-    color: rgb(18, 0, 219);
+    color: rgb(50, 42, 137);
     text-decoration: none;
     font-weight: 500;
     height: 70px;
